; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-ixp2000/extr_core.c_update_gpio_int_csrs.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-ixp2000/extr_core.c_update_gpio_int_csrs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IXP2000_GPIO_FEDR = common dso_local global i32 0, align 4
@GPIO_IRQ_falling_edge = common dso_local global i32 0, align 4
@IXP2000_GPIO_REDR = common dso_local global i32 0, align 4
@GPIO_IRQ_rising_edge = common dso_local global i32 0, align 4
@IXP2000_GPIO_LSLR = common dso_local global i32 0, align 4
@GPIO_IRQ_level_low = common dso_local global i32 0, align 4
@IXP2000_GPIO_LSHR = common dso_local global i32 0, align 4
@GPIO_IRQ_level_high = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @update_gpio_int_csrs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @update_gpio_int_csrs() #0 {
  %1 = load i32, i32* @IXP2000_GPIO_FEDR, align 4
  %2 = load i32, i32* @GPIO_IRQ_falling_edge, align 4
  %3 = call i32 @ixp2000_reg_write(i32 %1, i32 %2)
  %4 = load i32, i32* @IXP2000_GPIO_REDR, align 4
  %5 = load i32, i32* @GPIO_IRQ_rising_edge, align 4
  %6 = call i32 @ixp2000_reg_write(i32 %4, i32 %5)
  %7 = load i32, i32* @IXP2000_GPIO_LSLR, align 4
  %8 = load i32, i32* @GPIO_IRQ_level_low, align 4
  %9 = call i32 @ixp2000_reg_write(i32 %7, i32 %8)
  %10 = load i32, i32* @IXP2000_GPIO_LSHR, align 4
  %11 = load i32, i32* @GPIO_IRQ_level_high, align 4
  %12 = call i32 @ixp2000_reg_wrb(i32 %10, i32 %11)
  ret void
}

declare dso_local i32 @ixp2000_reg_write(i32, i32) #1

declare dso_local i32 @ixp2000_reg_wrb(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
